<resources>
    <string name="app_name">AndroRecetas</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lblButtonWelcomeBack">Welcome back</string>
    <string name="dashboard_profile">Profile</string>
    <string name="dashboard_search_text">Start Cooking</string>
    <string name="dashboard_add_recipe_text">Add recipe</string>
    <string name="help_title">Help</string>
    <string name="settings_title">Settings</string>
    <string name="search_menu_by_name_title">By name</string>
    <string name="search_menu_by_group_title">By group</string>
    <string name="search_menu_by_cuisine_title">By cuisine</string>
    <string name="search_menu_random_recipe_title">Random recipe</string>
    <string name="no_recipes_to_show">Oops! There are no recipes to show</string>
    <string name="arabian">Arabian</string>
    <string name="asian">Asian</string>
    <string name="european">European</string>
    <string name="latinamerican">Latin American</string>
    <string name="mediterranean">Mediterranean</string>
    <string name="other">Other</string>
    <string name="lblStartRecipe">Start recipe</string>
    <string name="step_btnFinish">Fin</string>
    <string name="step_btnNext">Next</string>
    <string name="step_btnPrevious">Prev.</string>
    <string name="num_step">Step %s</string>
    <string name="num_step_add_step">(enter step %s)</string>
    <string name="start">Start</string>
    <string name="overview_group_title">Group: </string>
    <string name="overview_cuisine_title">Cuisine: </string>
    <string name="overview_user_title">By: </string>
    <string name="go_to_steps">Go to steps</string>
    <string name="group_title_bread">Bread</string>
    <string name="group_title_cocktail">Cocktail</string>
    <string name="group_title_dessert">Dessert</string>
    <string name="group_title_egg">Egg</string>
    <string name="group_title_fish">Fish</string>
    <string name="group_title_legumes">Legumes</string>
    <string name="group_title_meat">Meat</string>
    <string name="group_title_mushrooms">Mushrooms</string>
    <string name="group_title_pastapizza">Pasta/Pizza</string>
    <string name="group_title_ricecereal">Rice/Cereal</string>
    <string name="group_title_sauce">Sauce</string>
    <string name="group_title_shellfish">Shellfish</string>
    <string name="group_title_snack">Snack</string>
    <string name="group_title_soup">Soup</string>
    <string name="group_title_vegetables">Vegetables</string>
    <string name="group_description_bread">Bread is a staple food prepared from a dough of flour and water, usually by baking</string>
    <string name="group_description_cocktail">A cocktail is an alcoholic mixed drink, which is either a combination of spirits, or one or more spirits mixed with other ingredients such as fruit juice, flavored syrup, or cream</string>
    <string name="group_description_dessert">Usually consists of sweet foods, such as confections, and possibly a beverage such as dessert wine or liqueur</string>
    <string name="group_description_egg">Egg yolks and whole eggs store significant amounts of protein and choline, and are widely used in cookery</string>
    <string name="group_description_fish">Found in the fresh and salt waters of the world, fish has been an important source of protein and other nutrients for humans throughout history</string>
    <string name="group_description_legumes">Legumes are notable in that most of them have symbiotic nitrogen-fixing bacteria in structures called root nodules. For that reason, they play a key role in crop rotation</string>
    <string name="group_description_meat">Meat is mainly composed of water, protein, and fat. It is edible raw, but is normally eaten after it has been cooked and seasoned or processed in a variety of ways</string>
    <string name="group_description_mushrooms">Edible mushrooms include many fungal species that are either harvested wild or cultivated</string>
    <string name="group_description_pastapizza">Italian type of food typically made from an unleavened dough of wheat flour mixed with water or eggs</string>
    <string name="group_description_ricecereal">Rice, a monocot, is normally grown as an annual plant, although in tropical areas it can survive as a perennial and can produce a ratoon crop for up to 30 years</string>
    <string name="group_description_sauce">Most sauces are not normally consumed by themselves; they add flavor, moisture, and visual appeal to a dish</string>
    <string name="group_description_shellfish">Shellfish is a colloquial and fisheries term for exoskeleton-bearing aquatic invertebrates used as food, including various species of molluscs, crustaceans, and echinoderms</string>
    <string name="group_description_snack">Traditionally, snacks are prepared from ingredients commonly available at home without a great deal of preparation</string>
    <string name="group_description_soup">Soup is a primarily liquid food, generally served warm or hot (but may be cool or cold), that is made by combining ingredients of meat or vegetables with stock, or water</string>
    <string name="group_description_vegetables">Originally, vegetables were collected from the wild by hunter-gatherers and entered cultivation in several parts of the world, probably during the period 10,000 BC to 7,000 BC</string>
    <string name="user_selection_no_user_selected">No user selected</string>
    <string name="user_selection_btnEdit">Edit</string>
    <string name="user_selection_no_users_yet">No users yet</string>
    <string name="nickname_hint">(nickname)</string>
    <string name="ARGS_USER_ID" />
    <string name="search_title">Look for your recipe</string>
    <string name="recipe_title">Recipe</string>
    <string name="enter_name_title">Enter name of the recipe</string>
    <string name="enter_name_hint">(name)</string>
    <string name="enter_group_title">Enter group</string>
    <string name="enter_cuisine_title">Enter cuisine</string>
    <string name="enter_description_title">Enter a description of the recipe</string>
    <string name="enter_description_hint">(description)</string>
    <string name="error_validation_message">ERROR: All fields should be filled. Password minimum length 4 characters</string>
    <string name="recipe_finished_title">Congratulations, you are done! How does %s taste?</string>
    <string name="recipe_finished_subtitle">Rate the recipe down below!</string>
    <string name="dont_rate">Exit</string>
    <string name="rate_with">%s stars</string>
    <string name="not_rated_yet">Not rated yet</string>
    <string name="rating">%s / 5</string>
    <string name="recipe_already_rated">You have already rated this recipe</string>
    <string name="acknowledgement_message">Thank you so much for installing AndroRecetas!</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="exit_addsteps_title">Exit recipe</string>
    <string name="exit_addsteps_message">Are you sure to exit? The recipe will not be saved</string>
    <string name="delete_description">Delete</string>
    <string name="error_enter_steps_message">Please enter any step before uploading the recipe</string>
    <string name="error_enter_ingredients_message">Please enter any ingredient before going to steps</string>
    <string name="error_add_steps_message">Error: the field can not be empty</string>
    <string name="error">Error</string>
    <string name="success">Success</string>
    <string name="ok_enter_recipe">Recipe uploaded</string>
    <string name="help_dashboard_toolbar_text">Here is the main menu. You need to create a profile in order to access to the content</string>
    <string name="help_profile_toolbar_text">Choose your profile. If there are still no profile created or you are a new user, use the button for creating one.</string>
    <string name="help_addprofile_toolbar_text">Please choose an avatar and a nickname for creating a new profile</string>
    <string name="help_editprofile_toolbar_text">Choose the new avatar or nickname (or both) and your profile will be edited at once</string>
    <string name="help_overview_toolbar_text">This is a quick view of the most relevant aspects of the recipe like the title, description, ratings…</string>
    <string name="help_searchbycuisine_toolbar_text">A cuisine is a style of cooking characterized by distinctive ingredients, techniques and dishes, and usually associated with a specific culture or geographic region</string>
    <string name="help_searchbygroup_toolbar_text">A food group is a collection of foods that share similar nutritional properties or biological classifications</string>
    <string name="help_searchbyname_toolbar_text">Enter the name of the recipe you wish to prepare and it will appear immediately</string>
    <string name="help_searchmenu_toolbar_text">Here you can select the way you want to search your favourite recipe. Feel free to explore!</string>
    <string name="help_ranking_toolbar_text">In this page you can watch the best-rated recipes, according to your votes. Only the top 5 recipes will appear here!</string>
    <string name="help_addrecipe_toolbar_text">First you have to specify the name, description, group and cuisine. Then go to the next page for entering the ingredients</string>
    <string name="help_addsteps_toolbar_text">Add all steps of your recipe. When you are done, press the \'add recipe\' button and the recipe will be uploaded!</string>
    <string name="help_addingredients_toolbar_text">Add all ingredients of your recipe. Be careful and don\'t forget any of them!</string>
    <string name="recipe_of_the_day_title">Recipe of the day</string>
    <string name="tip_of_the_day_title">Hi there, %s! Here is the tip of the day:</string>
    <string name="dashboard_no_current_user">Please log in to get full access to the app</string>
    <string name="password_hint">(password)</string>
    <string name="login_title">Login</string>
    <string name="login_message">Please enter your password to log in</string>
    <string name="user_selection_btnLogout">Log out</string>
    <string name="pref_silent_mode_title">Silent mode</string>
    <string name="settings_title_display">Display Recipe settings</string>
    <string name="pref_silent_mode_description">The app will not read each step of the recipe</string>
    <string name="help_settings_toolbar_text">Here you can setup then game options</string>
    <string name="search_ranking">Ranking</string>
    <string name="error_validation_message_addrecipe">ERROR: All fields should be filled.</string>
    <string name="add">Add</string>
    <string name="lbl_thanks_for_purchasing">Thanks for purchasing this app</string>
    <string name="lbl_made_by">Made by Miguel Ángel Ruz Franco</string>
    <string name="user_selection_btnShopping">Shop</string>
    <string name="toolbar_title_dashboard">Home</string>
    <string name="toolbar_title_profile">Profile</string>
    <string name="toolbar_title_edit_profile">Edit profile</string>
    <string name="toolbar_title_add_profile">Add profile</string>
    <string name="toolbar_title_shopping_list">Shopping list</string>
    <string name="toolbar_title_add_recipe">Add recipe</string>
    <string name="toolbar_title_add_ingredients">Add ingredients</string>
    <string name="toolbar_title_add_steps">Add steps</string>
    <string name="toolbar_title_search_menu">Search menu</string>
    <string name="toolbar_title_search_by_name">Search by name</string>
    <string name="toolbar_title_search_by_group">Search by group</string>
    <string name="toolbar_title_search_by_cuisine">Search by cuisine</string>
    <string name="toolbar_title_ranking">Ranking</string>
    <string name="toolbar_title_overview">Overview</string>
    <string name="toolbar_title_steps">Steps</string>
    <string name="toolbar_title_end_recipe">End recipe</string>
</resources>